// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductWhatsIncluded
    block={
        Object {
            "backgroundColor": "foo",
            "products": Array [
              Object {
                "fields": Object {
                  "productHandle": "foo",
                },
              },
            ],
            "title": "foo",
          }
    }
    product={
        Object {
            "available": true,
            "blocks": Array [],
            "cartDetails": "foo",
            "description": "foo",
            "flavorDescription": "foo",
            "gridImage": "foo",
            "handle": "foo",
            "id": "foo",
            "pintImage": "foo",
            "price": 0,
            "subItems": Array [],
            "subItemsAvailable": true,
            "title": "foo",
            "variants": Array [
              Object {},
            ],
          }
    }
    products={Object {}}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="block-headline my3 nowrap col-12 md-col-6 center"
>
          What’s included
</h2>,
        <div
          className="flex flex-column col-12 md-col-6"
>
          
</div>,
        null,
      ],
      "className": "flex justify-between drip relative",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "What’s included",
          "className": "block-headline my3 nowrap col-12 md-col-6 center",
        },
        "ref": null,
        "rendered": "What’s included",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
          "className": "flex flex-column col-12 md-col-6",
        },
        "ref": null,
        "rendered": Array [],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline my3 nowrap col-12 md-col-6 center"
>
            What’s included
</h2>,
          <div
            className="flex flex-column col-12 md-col-6"
>
            
</div>,
          null,
        ],
        "className": "flex justify-between drip relative",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "What’s included",
            "className": "block-headline my3 nowrap col-12 md-col-6 center",
          },
          "ref": null,
          "rendered": "What’s included",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "flex flex-column col-12 md-col-6",
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductWhatsIncluded
    block={
        Object {
            "fields": Object {
              "backgroundColor": "light-pink",
              "illustration": null,
              "products": Array [
                Object {
                  "fields": Object {
                    "productHandle": "",
                  },
                },
              ],
            },
          }
    }
    products={Object {}}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="block-headline my3 nowrap col-12 md-col-6 center"
>
          What’s included
</h2>,
        <div
          className="flex flex-column col-12 md-col-6"
>
          <div
                    className="flex items-start my2 col-12"
          >
                    <div
                              className="mr3 col-2"
                    >
                              <Image
                                        alt="undefined image"
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="undefined?w=500&fm=png&q=90"
                                        style={Object {}}
                              />
                    </div>
                    <div
                              className="col-10"
                    >
                              <h3
                                        className="description-title bold mb2"
                              >
                                        1x undefined
                              </h3>
                              <p
                                        className="block-subheadline"
                              />
                    </div>
          </div>
</div>,
        null,
      ],
      "className": "flex justify-between drip relative",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "What’s included",
          "className": "block-headline my3 nowrap col-12 md-col-6 center",
        },
        "ref": null,
        "rendered": "What’s included",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex items-start my2 col-12"
>
              <div
                            className="mr3 col-2"
              >
                            <Image
                                          alt="undefined image"
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src="undefined?w=500&fm=png&q=90"
                                          style={Object {}}
                            />
              </div>
              <div
                            className="col-10"
              >
                            <h3
                                          className="description-title bold mb2"
                            >
                                          1x undefined
                            </h3>
                            <p
                                          className="block-subheadline"
                            />
              </div>
</div>,
          ],
          "className": "flex flex-column col-12 md-col-6",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="mr3 col-2"
>
                  <Image
                                    alt="undefined image"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="undefined?w=500&fm=png&q=90"
                                    style={Object {}}
                  />
</div>,
                <div
                  className="col-10"
>
                  <h3
                                    className="description-title bold mb2"
                  >
                                    1x undefined
                  </h3>
                  <p
                                    className="block-subheadline"
                  />
</div>,
              ],
              "className": "flex items-start my2 col-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Image
                    alt="undefined image"
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src="undefined?w=500&fm=png&q=90"
                    style={Object {}}
/>,
                  "className": "mr3 col-2",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "undefined image",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "undefined?w=500&fm=png&q=90",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h3
                      className="description-title bold mb2"
>
                      1x undefined
</h3>,
                    <p
                      className="block-subheadline"
/>,
                  ],
                  "className": "col-10",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "1x undefined",
                      "className": "description-title bold mb2",
                    },
                    "ref": null,
                    "rendered": "1x undefined",
                    "type": "h3",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "className": "block-subheadline",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "p",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline my3 nowrap col-12 md-col-6 center"
>
            What’s included
</h2>,
          <div
            className="flex flex-column col-12 md-col-6"
>
            <div
                        className="flex items-start my2 col-12"
            >
                        <div
                                    className="mr3 col-2"
                        >
                                    <Image
                                                alt="undefined image"
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src="undefined?w=500&fm=png&q=90"
                                                style={Object {}}
                                    />
                        </div>
                        <div
                                    className="col-10"
                        >
                                    <h3
                                                className="description-title bold mb2"
                                    >
                                                1x undefined
                                    </h3>
                                    <p
                                                className="block-subheadline"
                                    />
                        </div>
            </div>
</div>,
          null,
        ],
        "className": "flex justify-between drip relative",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "What’s included",
            "className": "block-headline my3 nowrap col-12 md-col-6 center",
          },
          "ref": null,
          "rendered": "What’s included",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex items-start my2 col-12"
>
                <div
                                className="mr3 col-2"
                >
                                <Image
                                                alt="undefined image"
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src="undefined?w=500&fm=png&q=90"
                                                style={Object {}}
                                />
                </div>
                <div
                                className="col-10"
                >
                                <h3
                                                className="description-title bold mb2"
                                >
                                                1x undefined
                                </h3>
                                <p
                                                className="block-subheadline"
                                />
                </div>
</div>,
            ],
            "className": "flex flex-column col-12 md-col-6",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="mr3 col-2"
>
                    <Image
                                        alt="undefined image"
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="undefined?w=500&fm=png&q=90"
                                        style={Object {}}
                    />
</div>,
                  <div
                    className="col-10"
>
                    <h3
                                        className="description-title bold mb2"
                    >
                                        1x undefined
                    </h3>
                    <p
                                        className="block-subheadline"
                    />
</div>,
                ],
                "className": "flex items-start my2 col-12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Image
                      alt="undefined image"
                      bg={false}
                      className="w100"
                      onImgLoad={[Function]}
                      src="undefined?w=500&fm=png&q=90"
                      style={Object {}}
/>,
                    "className": "mr3 col-2",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "alt": "undefined image",
                      "bg": false,
                      "children": null,
                      "className": "w100",
                      "onImgLoad": [Function],
                      "src": "undefined?w=500&fm=png&q=90",
                      "style": Object {},
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h3
                        className="description-title bold mb2"
>
                        1x undefined
</h3>,
                      <p
                        className="block-subheadline"
/>,
                    ],
                    "className": "col-10",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "1x undefined",
                        "className": "description-title bold mb2",
                      },
                      "ref": null,
                      "rendered": "1x undefined",
                      "type": "h3",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": undefined,
                        "className": "block-subheadline",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "p",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
